--- a/CustomMacroFactory/CustomMacroFactory.csproj
+++ b/CustomMacroFactory/CustomMacroFactory.csproj
@@ -23,6 +23,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CustomMacroBase\CustomMacroBase.csproj" />
   </ItemGroup>
 
