--- a/CustomMacroFactory/CustomMacroFactory.csproj
+++ b/CustomMacroFactory/CustomMacroFactory.csproj
@@ -8,7 +8,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Platforms>x64</Platforms>
-    <Configurations>Release</Configurations>
+    <Configurations>Release;Debug</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -18,6 +18,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <FileAlignment>512</FileAlignment>
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <FileAlignment>512</FileAlignment>
     <DebugType>none</DebugType>
   </PropertyGroup>
