--- a/DS4Windows.UI/DS4WinWPF.UI.csproj
+++ b/DS4Windows.UI/DS4WinWPF.UI.csproj
@@ -6,7 +6,7 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>DS4WinWPF.UI</RootNamespace>
     <Platforms>x64</Platforms>
-    <Configurations>Release</Configurations>
+    <Configurations>Release;Debug</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
