--- a/DS4WindowsTests/DS4WindowsTests.csproj
+++ b/DS4WindowsTests/DS4WindowsTests.csproj
@@ -8,7 +8,7 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <Platforms>x64</Platforms>
-    <Configurations>Release</Configurations>
+    <Configurations>Release;Debug</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
