--- a/DS4Windows/DS4WinWPF.csproj
+++ b/DS4Windows/DS4WinWPF.csproj
@@ -92,6 +92,10 @@
     <Reference Include="Nefarius.ViGEm.Client">
       <HintPath>..\libs\$(Platform)\Nefarius.ViGEm.Client\Nefarius.ViGEm.Client.dll</HintPath>
     </Reference>
+
+    <Reference Include="TrarsUI.Shared">
+      <HintPath>..\CustomMacroFactory\libs\TrarsUI.Shared.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <!-- Apparently the None tags are needed as well as the Resource tags.
