--- a/CustomMacroBase/CustomMacroBase.csproj
+++ b/CustomMacroBase/CustomMacroBase.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="Sdcb.PaddleOCR" Version="2.7.0.3" />
     <PackageReference Include="Sdcb.PaddleOCR.Models.Local" Version="2.7.0" />
     <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
   
@@ -55,10 +56,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Update="CustomControlEx\ToggleButtonEx\cToggleButton_style.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Update="CustomControlEx\VerticalButtonEx\cVerticalButtonBase_style.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
